feat(user-service): add profile APIs + RBAC (Task 4)